# detecting-humans-computer-vision

./: .gitignore  .gitmodules  CMakeLists.txt  PopulateModels.sh  Sam3Model.h  TensorRTProvider.h  TensorRTProviderBuilder.cpp  TensorRTProviderBuilder.h  language.token  main.cpp
cmake/: FindOnnxRuntime.cmake
include/: AbstractSession.h  AbstractSessionFactory.h  AbstractStartSessionFactory.h  AbstractTensor.h  CPUTensor.h  CudaProviderActuator.h  CudaTensor.h  GenericTensor.h  Image.h  ImageProvider.h  LanguageTensor.h  LanguageToken.h  MaskDecoderInitialiser.h  MaskDecoderSession.h  MaskDecoderSessionFactory.h  NormaliseImageKernel.h  OnnxSession.h  OnnxSessionPartial.h  PersistentImageInput.h  PersistentImageInputFactory.h  PersistentSam3Model.h  ProviderActuator.h  Sam3Context.h  Sam3ContextBuilder.h  Sam3Model.h  Sam3ModelState.h  SessionInitialiser.h  StartFlowSession.h  TensorImage.h  TensorRTProviderActuator.h  TensorRTProviderBuilder.h  TextEncoderInitialiser.h  TextEncoderSession.h  TextEncoderSessionFactory.h  UninitialisedSession.h  VisionEncoderInitialiser.h  VisionEncoderSession.h  VisionEncoderSessionFactory.h
python/: requirements.txt
scripts/: LanguageTokenizer.py  PopulateModels.sh
src/: CPUTensor.cpp  CudaTensor.cpp  GenericTensor.cpp  LanguageTensor.cpp  LanguageToken.cpp  MaskDecoderInitialiser.cpp  MaskDecoderSession.cpp  MaskDecoderSessionFactory.cpp  NormaliseImage.cu  NormaliseImageKernel.cu  OnnxSession.cpp  OnnxSessionPartial.cpp  PersistentImageInput.cpp  PersistentImageInputFactory.cpp  PersistentSam3Model.cpp  Sam3Context.cpp  main.cpp  (+12 more)
